zod/tests/ui/fail/unit_struct.stderr
error: Unsupported shape `no fields`. Expected named fields or unnamed fields.
 --> tests/ui/fail/unit_struct.rs:4:10
  |
4 | #[derive(Zod)]
  |          ^^^
  |
  = note: this error originates in the derive macro `Zod` (in Nightly builds, run with -Z macro-backtrace for more info)
